# riaps-core

./: .cproject  .gitignore  .project  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CMakeLists_amd64.txt  CMakeLists_arm.txt  COPYRIGHT_  Doxyfile  Jenkins_CMakeLists.txt  Jenkinsfile  LEGAL  LICENSE  README.md  armhf-toolchain.cmake  build.sh  curltest.cc  package.sh  version.sh
examples/ActiveReplica/: ActiveReplica.json  CMakeLists.txt  sample.riaps
examples/ActiveReplica/include/: GlobalEstimator.h  LocalEstimator.h  Sensor.h  Server.h
examples/ActiveReplica/src/: Client.cc  GlobalEstimator.cc  LocalEstimator.cc  Sensor.cc  Server.cc
examples/AdaptiveTimer/: AdaptiveTimer.riaps  CMakeLists.txt
examples/AdaptiveTimer/cpp/: ATimer.cc  ATimerBase.cc
examples/AdaptiveTimer/json-gen/: AdaptiveTimer_app.json
examples/Consensus/: CMakeLists.txt  Consensus.json  sample.riaps
examples/DistrCoord/: CMakeLists.txt  DistrCoord.json  sample.riaps
examples/DistrCoord/include/: DistrCoord.h
examples/DistrCoord/src/: DistrCoord.cc
examples/DistributedEstimatorPy/: CMakeLists.txt  DistributedEstimator.json  sample.riaps
examples/DistributedEstimatorPy/include/: GlobalEstimator.h  LocalEstimator.h  Sensor.h
examples/DistributedEstimatorPy/src/: GlobalEstimator.cc  LocalEstimator.cc  Sensor.cc
examples/LeaderElection/: CMakeLists.txt  sample.riaps
examples/LeaderElection/src/: Leader.cc
examples/Limits/: CMakeLists.txt
examples/Limits/cpp/: CPULimit.cc  CPULimitBase.cc  MemLimit.cc  MemLimitBase.cc
examples/Limits/json-gen/: Limits_app.json
examples/Limits/python/: MemLimit.py
examples/ScheduledTimer/: CMakeLists.txt
examples/ScheduledTimer/cpp/: ST.cc  STBase.cc
examples/ScheduledTimer/json-gen/: ScheduledTimer_app.json
examples/TSyncCA/: CMakeLists.txt  TSyncCA.riaps
examples/TSyncCA/cpp/: Tsca.cc  TscaBase.cc
examples/TSyncCA/json-gen/: TSyncCA_app.json
examples/WeatherMonitor/: CMakeLists.txt  WeatherMonitor.json  wmonitorDT.dt
examples/WeatherMonitor/WeatherMonitor/: CMakeLists.txt  WeatherMonitor.json
examples/WeatherMonitor/src/: TempSensor.cc
examples/group_features/ActiveReplica/: ActiveReplica.json  CMakeLists.txt
examples/pybind/DistributedEstimatorPybind/: CMakeLists.txt  DistributedEstimator.json  riaps-log.conf  sample.riaps
examples/pybind/Group/: CMakeLists.txt  GroupApp.json  Groupie.py  group.depl  group.riaps  groupapp.capnp  riaps-app.cert  riaps-log.conf  riaps.key  riaps.yaml
examples/pybind/WeatherMonitor/: CMakeLists.txt  wmonitor.riaps  wmonitor_all.depl
src/componentmodel/: CMakeLists.txt  CMakeLists_bak.txt  dc.cc  delete_r_network_interfaces.cc  r_actor.cc  r_actor_main.cc  r_argumentparser.cc  r_asyncinfo.cc  r_callbacktimer.cc  r_commandlineparser.cc  r_componentbase.cc  r_debugcomponent.cc  r_deploapi.cc  r_devicethread.cc  r_devmapi.cc  r_discoverdapi.cc  r_discoverdapi_v1.cc  r_groupbase.cc  r_insideport.cc  r_insiderport.cc  r_messagebase.cc  r_messageparams.cc  r_messagereader.cc  r_network_interfaces.cc  r_oneshottimer.cc  r_parameter.cc  r_payload.cc  r_periodictimer.cc  r_peripheral.cc  r_portbase.cc  r_portregister.cc  r_publisherport.cc  r_pubportbase.cc  r_pubportgroup.cc  r_pyactor.cc  r_requestport.cc  r_responseport.cc  r_senderport.cc  r_subportbase.cc  r_subportgroup.cc  (+2 more)
src/componentmodel/ports/: r_answerport.cc  r_answerportgroup.cc  r_arequestport.cc  r_aresponseport.cc  r_insideport.cc  r_periodictimer.cc  r_portbase.cc  r_porterror.cc  r_portresult.cc  r_publisherport.cc  r_pubportbase.cc  r_pubportgroup.cc  r_queryport.cc  r_queryportgroup.cc  r_recvport.cc  r_requestport.cc  r_responseport.cc  r_senderport.cc  r_subportbase.cc  r_subportgroup.cc  r_subscriberport.cc  r_timedport.cc
src/devm/: CMakeLists.txt  r_devm_actor.cc  r_devm_handlers.cc  r_devmd.cc
src/discoveryd/: CMakeLists.txt  r_consul.cc  r_consul_actor.cc  r_dhtdata.cc  r_dhttracker.cc  r_discoveryd.cc  r_http_api.cc  r_msghandler.cc  r_odht.cc  r_riaps_actor.cc  r_riaps_cmd_handler.cc  r_service_poller.cc  r_validator.cc
src/zcm/: CMakeLists.txt  actor.cpp  client.cpp  component.cpp  json.cpp  manager.cpp  operation_queue.cpp  operation_types.cpp  publisher.cpp  server.cpp  servicebase.cc  subscriber.cpp  timer.cpp
tests/DC/grouptest/: .cproject  .gitignore  .project  .toolchain.arm-linux-gnueabihf.cmake  CMakeLists.txt  Grouptest.riaps  ctrl.launch  fabfile.py  package.sh
tests/DistributedEstimatorPybind/: CMakeLists.txt  sample.riaps
tests/DistributedEstimatorPybind/include/: GlobalEstimator.h  LocalEstimator.h  Sensor.h  converter.h
tests/DistributedEstimatorPybind/src/: GlobalEstimator.cc  LocalEstimator.cc  Sensor.cc  converter.cc
tests/DistributedVoltage/: CMakeLists.txt  DistributedVoltage.json  Gateway.py  distributedvoltage.capnp  distributedvoltage.depl  distributedvoltage.riaps
tests/DistributedVoltage/include/: ModbusUART.h
tests/DistributedVoltage/src/: ModbusUART.cc
tests/EchoIO/: CMakeLists.txt
tests/EchoIO/include/: Console.h  IODevice.h  IODeviceThread.h
tests/EchoIO/src/: Echo.cc  IODevice.cc
tests/GpioDeviceTesting/: CMakeLists.txt  GpioToggleExample.json  gpioExample.riaps
tests/GpioDeviceTesting/include/: GpioDeviceComponent.h  GpioDeviceThread.h  ToggleGpioComponent.h
tests/GpioDeviceTesting/src/: GpioDeviceComponent.cc  GpioDeviceThread.cc  ToggleGpioComponent.cc
tests/PeriodicTimerSync/: CMakeLists.txt  CompA.py  TimerSync.depl  TimerSync.json  TimerSync.riaps  riaps-log.conf  timersync.capnp
tests/PeriodicTimerSync/include/: TimerComp.h
tests/PeriodicTimerSync/src/: TimerComp.cc
tests/TimedTest/: .cproject  .project  .toolchain.amd64.cmake  CMakeLists.txt  ctrl.launch  package.sh  ttest.riaps
tests/TimedTest/cpp/: Filter.cc  FilterBase.cc  Sensor.cc  SensorBase.cc
tests/TimedTest/json-gen/: TimedTest.json
tests/TimedTest/messages-gen/: DummyT.capnp  (+2 more)
tests/test_distributed_estimator_cmessage/: CMakeLists.txt
tests/test_pubsub_reqrep/: CMakeLists.txt
tests/test_timer/: CMakeLists.txt  README.md  TimerTest.json  actor_tmr.cc  timer.riaps
(+3475 files in other folders)
